# hermes-gsw

./: .gitignore  CMakeLists.txt  README.md  package.json
include/: hs_codes.h  pch.h
include/components/: hs_component_console.h  hs_component_logger.h
include/core/: Application.h  UIWindow.h  hs_application.h  ui_window.h
include/windows/: demo_window.h  hs_window_battery.h  hs_window_communication.h  hs_window_demo.h  hs_window_implot_demo.h  hs_window_thermal.h  im_plot_demo_window.h  window_communication.h
src/: Hermes.cpp  Hermes.h  Modules.h  main.cpp
src/Modules/: DemoWindow.h  ImPlotDemo.h
src/components/: hs_component_console.cpp  hs_component_logger.cpp
src/core/: Application.cpp  application.cpp  hs_application.cpp
src/windows/: hs_window_battery.cpp  hs_window_communication.cpp  hs_window_thermal.cpp  window_communication.cpp
